# rarg-numba-patterns

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/rarg_numba_patterns/: __init__.py  intrinsics.py  literals.py
src/rarg_numba_patterns/concurrency/: mutex.py
tests/: conftest.py  test_intrinsics.py  test_literals.py  test_pointers.py  test_smoke.py
