[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rarg-numba-patterns"
version = "0.0.1"
description = "General-purpose numba intrinsics and literals patterns"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "BSD-3-Clause"
authors = [{ name = "Simon Perkins", email = "simon.perkins@gmail.com" }]
dependencies = [
    "numpy>=2.0.0",
    "numba>=0.60.0",
]

[project.urls]
Homepage = "https://github.com/ratt-ru/rarg-numba-patterns"
Repository = "https://github.com/ratt-ru/rarg-numba-patterns"

[dependency-groups]
test = ["pytest"]
dev = ["pre-commit", "mypy", "ruff", "tbump"]

[tool.hatch.build.targets.wheel]
packages = ["src/rarg_numba_patterns"]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tbump.version]
current = "0.0.1"
# https://semver.org/#spec-item-9
regex = '''(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)-?(?P<ptype>(alpha|beta|rc)\.(?P<prerelease>\d+))?'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "src/rarg_numba_patterns/__init__.py"
search = '__version__ = "{current_version}"'
